[package]
name = "pgtuna"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.42"
serde = "^1.0.34"
serde_json = "^1.0.34"
serde_derive = "^1.0.34"
unix-named-pipe = "0.2.0"
ctrlc = "3.1.1"
rand = "0.5.5"

[dev-dependencies]
fs2 = "0.4.3"
miniserde = "0.1"